--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,8 @@
 		<slf4j.version>1.7.6</slf4j.version>
 		<logback.version>1.1.1</logback.version>
 		<jsoup.version>1.7.3</jsoup.version>
-		<lombok.version>1.12.5-withoutunicodeescape</lombok.version>
+		<lombok.version>1.12.4</lombok.version>
+		<lombok.maven.version>1.12.4.0</lombok.maven.version>
 		<typesafe-config.version>1.2.0</typesafe-config.version>
 		<hamcrest.version>1.3</hamcrest.version>
 		<junit.version>4.11</junit.version>
@@ -153,7 +154,7 @@
 			<plugin>
 				<groupId>org.projectlombok</groupId>
 				<artifactId>lombok-maven-plugin</artifactId>
-				<version>${lombok.version}</version>
+				<version>${lombok.maven.version}</version>
 				<executions>
 					<execution>
 						<phase>generate-sources</phase>
@@ -166,7 +167,6 @@
 					<encoding>UTF-8</encoding>
 					<addOutputDirectory>false</addOutputDirectory>
 					<sourceDirectory>src/main/java</sourceDirectory>
-					<withoutUnicodeEscape>true</withoutUnicodeEscape>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -207,7 +207,7 @@
 					<plugin>
 						<groupId>org.projectlombok</groupId>
 						<artifactId>lombok-maven-plugin</artifactId>
-						<version>${lombok.version}</version>
+						<version>${lombok.maven.version}</version>
 						<dependencies>
 							<dependency>
 								<groupId>sun.jdk</groupId>
@@ -222,17 +222,4 @@
 			</build>
 		</profile>
 	</profiles>
-
-	<repositories>
-		<repository>
-			<id>emalock3.github.repo</id>
-			<url>https://github.com/emalock3/mvn-repo/blob/master/</url>
-		</repository>
-	</repositories>
-	<pluginRepositories>
-		<pluginRepository>
-			<id>emalock3.github.repo</id>
-			<url>https://github.com/emalock3/mvn-repo/blob/master/</url>
-		</pluginRepository>
-	</pluginRepositories>
 </project>
